// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth - Login should disable and show correct login button text when logging in 1`] = `
<pf-login-page
  allowSelfRegistration={[Function Boolean]}
  fb={[Function FormBuilder]}
  gettingMarketingImage$={[Function Store]}
  gettingMarketingImageError$={[Function Store]}
  gettingMarketingImageSuccess$={[Function Store]}
  loggingIn={[Function Boolean]}
  login$={[Function Observable]}
  loginError="false"
  loginError$={[Function Observable]}
  loginErrorSubscription={[Function Subscriber]}
  loginForm={[Function FormGroup]}
  loginLogo={[Function String]}
  loginStore={[Function Store]}
  loginSubscription={[Function Subscriber]}
  loginSuccess={[Function Boolean]}
  loginSuccess$={[Function Observable]}
  loginSuccessSubscription={[Function Subscriber]}
  marketingImage$={[Function Store]}
  nextPage="undefined"
  route={[Function Object]}
  store={[Function Store]}
>
  <div
    class="d-flex flex-row"
  >
    <div
      class="p-2"
    >
      <div
        class="image-container"
      >
        
        
        
        <img
          class="image-container"
          src="null"
        />
        
        
      </div>
    </div>
    <div
      class="p-2"
    >
      <form
        class="ng-untouched ng-pristine ng-invalid"
        ng-reflect-form="[object Object]"
        novalidate=""
      >
        <div
          class="d-flex flex-column p-2 justify-content-center"
        >
          <div
            class="error-spacer"
          >
            
          </div>
          <label
            class="text-uppercase font-weight-bold"
            for="email"
          >
             Email Address 
          </label>
          <div
            class="form-group pb-3"
          >
            <input
              autofocus=""
              class="form-control login-input mb-1 ng-untouched ng-pristine ng-invalid"
              formcontrolname="email"
              id="Email"
              name="email"
              ng-reflect-name="email"
              type="email"
            />
          </div>
          <label
            class="text-uppercase font-weight-bold"
            for="password"
          >
             Password 
          </label>
          <div
            class="form-group pb-4"
          >
            <input
              class="form-control login-input ng-untouched ng-pristine ng-invalid"
              formcontrolname="password"
              id="password"
              name="password"
              ng-reflect-name="password"
              type="password"
            />
          </div>
          <div
            class="pb-1 d-flex align-self-center"
          >
            <button
              class="btn login-button disabled"
              disabled=""
              id="Login"
              type="submit"
            >
              
              
              <span>
                LOGGING IN...
              </span>
            </button>
          </div>
          <div
            class="p-0 d-flex align-self-center"
          >
            <a
              href="forgot-password"
            >
              Forgot Password?
            </a>
          </div>
        </div>
      </form>
      
      <div
        class="mt-5 mb-2 d-flex flex-column justify-content-center"
      >
        <button
          class="btn align-self-center"
          id="au-btn-request-access"
        >
          Request Access 
          <i
            class="fas fa-arrow-right"
          />
        </button>
      </div>
    </div>
  </div>
</pf-login-page>
`;

exports[`Auth - Login should show error notification on submitError 1`] = `
<pf-login-page
  allowSelfRegistration={[Function Boolean]}
  fb={[Function FormBuilder]}
  gettingMarketingImage$={[Function Store]}
  gettingMarketingImageError$={[Function Store]}
  gettingMarketingImageSuccess$={[Function Store]}
  loggingIn="false"
  login$={[Function Observable]}
  loginError="false"
  loginError$={[Function Observable]}
  loginErrorSubscription={[Function Subscriber]}
  loginForm={[Function FormGroup]}
  loginLogo={[Function String]}
  loginStore={[Function Store]}
  loginSubscription={[Function Subscriber]}
  loginSuccess="false"
  loginSuccess$={[Function Observable]}
  loginSuccessSubscription={[Function Subscriber]}
  marketingImage$={[Function Store]}
  nextPage="undefined"
  route={[Function Object]}
  store={[Function Store]}
>
  <div
    class="d-flex flex-row"
  >
    <div
      class="p-2"
    >
      <div
        class="image-container"
      >
        
        
        
        <img
          class="image-container"
          src="null"
        />
        
        
      </div>
    </div>
    <div
      class="p-2"
    >
      <form
        class="ng-untouched ng-pristine ng-invalid"
        ng-reflect-form="[object Object]"
        novalidate=""
      >
        <div
          class="d-flex flex-column p-2 justify-content-center"
        >
          <div
            class="error-spacer"
          >
            
          </div>
          <label
            class="text-uppercase font-weight-bold"
            for="email"
          >
             Email Address 
          </label>
          <div
            class="form-group pb-3"
          >
            <input
              autofocus=""
              class="form-control login-input mb-1 ng-untouched ng-pristine ng-invalid"
              formcontrolname="email"
              id="Email"
              name="email"
              ng-reflect-name="email"
              type="email"
            />
          </div>
          <label
            class="text-uppercase font-weight-bold"
            for="password"
          >
             Password 
          </label>
          <div
            class="form-group pb-4"
          >
            <input
              class="form-control login-input ng-untouched ng-pristine ng-invalid"
              formcontrolname="password"
              id="password"
              name="password"
              ng-reflect-name="password"
              type="password"
            />
          </div>
          <div
            class="pb-1 d-flex align-self-center"
          >
            <button
              class="btn login-button"
              id="Login"
              type="submit"
            >
              
              <span>
                LOG IN
              </span>
              
            </button>
          </div>
          <div
            class="p-0 d-flex align-self-center"
          >
            <a
              href="forgot-password"
            >
              Forgot Password?
            </a>
          </div>
        </div>
      </form>
      
      <div
        class="mt-5 mb-2 d-flex flex-column justify-content-center"
      >
        <button
          class="btn align-self-center"
          id="au-btn-request-access"
        >
          Request Access 
          <i
            class="fas fa-arrow-right"
          />
        </button>
      </div>
    </div>
  </div>
</pf-login-page>
`;

exports[`Auth - Login should show login when page is loaded 1`] = `
<pf-login-page
  allowSelfRegistration={[Function Boolean]}
  fb={[Function FormBuilder]}
  gettingMarketingImage$={[Function Store]}
  gettingMarketingImageError$={[Function Store]}
  gettingMarketingImageSuccess$={[Function Store]}
  loggingIn="false"
  login$={[Function Observable]}
  loginError="false"
  loginError$={[Function Observable]}
  loginErrorSubscription={[Function Subscriber]}
  loginForm={[Function FormGroup]}
  loginLogo={[Function String]}
  loginStore={[Function Store]}
  loginSubscription={[Function Subscriber]}
  loginSuccess="false"
  loginSuccess$={[Function Observable]}
  loginSuccessSubscription={[Function Subscriber]}
  marketingImage$={[Function Store]}
  nextPage="undefined"
  route={[Function Object]}
  store={[Function Store]}
>
  <div
    class="d-flex flex-row"
  >
    <div
      class="p-2"
    >
      <div
        class="image-container"
      >
        
        
        
        <img
          class="image-container"
          src="null"
        />
        
        
      </div>
    </div>
    <div
      class="p-2"
    >
      <form
        class="ng-untouched ng-pristine ng-invalid"
        ng-reflect-form="[object Object]"
        novalidate=""
      >
        <div
          class="d-flex flex-column p-2 justify-content-center"
        >
          <div
            class="error-spacer"
          >
            
          </div>
          <label
            class="text-uppercase font-weight-bold"
            for="email"
          >
             Email Address 
          </label>
          <div
            class="form-group pb-3"
          >
            <input
              autofocus=""
              class="form-control login-input mb-1 ng-untouched ng-pristine ng-invalid"
              formcontrolname="email"
              id="Email"
              name="email"
              ng-reflect-name="email"
              type="email"
            />
          </div>
          <label
            class="text-uppercase font-weight-bold"
            for="password"
          >
             Password 
          </label>
          <div
            class="form-group pb-4"
          >
            <input
              class="form-control login-input ng-untouched ng-pristine ng-invalid"
              formcontrolname="password"
              id="password"
              name="password"
              ng-reflect-name="password"
              type="password"
            />
          </div>
          <div
            class="pb-1 d-flex align-self-center"
          >
            <button
              class="btn login-button"
              id="Login"
              type="submit"
            >
              
              <span>
                LOG IN
              </span>
              
            </button>
          </div>
          <div
            class="p-0 d-flex align-self-center"
          >
            <a
              href="forgot-password"
            >
              Forgot Password?
            </a>
          </div>
        </div>
      </form>
      
      <div
        class="mt-5 mb-2 d-flex flex-column justify-content-center"
      >
        <button
          class="btn align-self-center"
          id="au-btn-request-access"
        >
          Request Access 
          <i
            class="fas fa-arrow-right"
          />
        </button>
      </div>
    </div>
  </div>
</pf-login-page>
`;
